--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,14 @@ Version: 1.0.0
 Date: 2025-06-13
 Authors@R: person("Gosuke", "Homma", 
                   email = "my.name.is.gosuke@gmail.com", 
-                  role = c("aut", "cre"))
+                  role = c("aut", "cre"),
+                  comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Provides functions for generating correlated time-to-event and binary 
     outcomes in clinical trial simulations. Supports multiple treatment arms, 
     subgroups, and event-driven analyses with proper correlation structure modeling 
     using copulas. Includes validation of Fréchet-Hoeffding bounds and comprehensive 
-    statistical testing capabilities.
+    statistical testing capabilities for overall survival, progression-free survival,
+    and objective response endpoints.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
